set(CMAKE_C_FLAGS "-std=gnu99")

message("build log level release level " ${RELEASE_LEVEL} " debug level " ${DEBUG_LEVEL})

if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
    set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -finline-limit=10000 -DNDEBUG -DLIBEVKV_LOG_LEVEL=${RELEASE_LEVEL}")
    set(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGS} -O2 -finline-limit=10000 -DNDEBUG -DLIBEVKV_LOG_LEVEL=${RELEASE_LEVEL}")
endif()

if("${CMAKE_BUILD_TYPE}" STREQUAL "UnitTest")
    set(CMAKE_CXX_FLAGS_UNITTEST "$ENV{CXXFLAGS} -O0 -ggdb -DDEBUG -DLIBEVKV_LOG_LEVEL=${DEBUG_LEVEL}")
    set(CMAKE_C_FLAGS_UNITTEST "$ENV{CFLAGS} -O0 -ggdb -DDEBUG -DLIBEVKV_LOG_LEVEL=${DEBUG_LEVEL}")
endif()

if("${CMAKE_BUILD_TYPE}" STREQUAL "Coverage")
    set(CMAKE_CXX_FLAGS_COVERAGE "$ENV{CXXFLAGS} -O0 -ggdb -DDEBUG -DLIBEVKV_LOG_LEVEL=${DEBUG_LEVEL} --coverage")
    set(CMAKE_C_FLAGS_COVERAGE "$ENV{CFLAGS} -O0 -ggdb -DDEBUG -DLIBEVKV_LOG_LEVEL=${DEBUG_LEVEL} --coverage")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
endif()

add_subdirectory (lib)
add_subdirectory (third/ctest)
add_subdirectory (third/logc)
if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
    add_subdirectory (kvclient)
    add_subdirectory (kvserver)
endif()
if("${CMAKE_BUILD_TYPE}" STREQUAL "UnitTest" OR "${CMAKE_BUILD_TYPE}" STREQUAL "Coverage")
    add_subdirectory (unittest)
endif()
